# qfratio

./: .Rbuildignore  .gitignore  .lintr  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  cleanup  cleanup.win  configure  configure.ac  configure.win  cran-comments.md
.github/workflows/: R-CMD-check.yaml
R/: RcppExports.R  dist_funs.R  dk_funs.R  hgs_funs.R  methods_qfrm.R  qfratio-package.R  ratio_fun.R  rqf_funs.R  utils.R  zzz.R
inst/: CITATION
man/: ApBIqr_int_cmE.Rd  ApIq_int_nmE.Rd  KiK.Rd  S_fromUL.Rd  a1_pk.Rd  arl.Rd  d1_i.Rd  d2_ij.Rd  d3_ijk.Rd  d3_ijk_m.Rd  dtil1_i_m.Rd  dtil1_i_v.Rd  dtil2_pq.Rd  gsl_wrap.Rd  hgs.Rd  hhat2_ij_m.Rd  is_diagonal.Rd  iseq.Rd  methods.qfrm.Rd  new_qfrm.Rd  pqfr.Rd  pqfr_A1B1.Rd  qfmrm.Rd  qfpm.Rd  qfratio-package.Rd  qfrm.Rd  qfrm_ApIq_int.Rd  qfrm_ApIq_npi.Rd  qfrm_cpp.Rd  range_qfr.Rd  rqfr.Rd  sum_counterdiag.Rd  tr.Rd
src/: ArrayBaseAddons.h  Makevars  Makevars.win  RcppExports.cpp  config.h  config.h.in  dist_funs.cpp  dk_funs.cpp  dk_funs.h  dk_funs_cwise.cpp  dk_funs_cwise.h  gsl_wrap.cpp  hgs_funs.cpp  hgs_funs.h  ratio_funs.cpp  ratio_funs.h  ratio_funs_cwise.cpp  ratio_funs_long.cpp  rqf_funs.cpp
src/gsl/: build.h  gsl_inline.h  gsl_machine.h  gsl_math.h  gsl_minmax.h  gsl_mode.h  gsl_nan.h  gsl_pow_int.h  gsl_precision.h  gsl_types.h
src/gsl/err/: error.c  gsl_errno.h  gsl_message.h  message.c  stream.c  strerror.c
src/gsl/integration/: err.c  gsl_integration.h  initialise.c  positivity.c  qags.c  qelg.c  qk.c  qk15.c  qpsrt.c  qpsrt2.c  reset.c  set_initial.c  util.c  workspace.c
src/gsl/poly/: eval.c  gsl_poly.h
src/gsl/roots/: brent.c  convergence.c  fsolver.c  gsl_roots.h  roots.h
src/gsl/specfunc/: bessel.c  bessel.h  bessel_I0.c  bessel_I1.c  bessel_In.c  bessel_Inu.c  bessel_J1.c  bessel_K0.c  bessel_Knu.c  bessel_amp_phase.c  bessel_amp_phase.h  bessel_temme.c  bessel_temme.h  beta.c  cheb_eval.c  chebyshev.h  check.h  elementary.c  error.h  eval.h  exp.c  gamma.c  gsl_sf_bessel.h  gsl_sf_elementary.h  gsl_sf_exp.h  gsl_sf_gamma.h  gsl_sf_hyperg.h  gsl_sf_laguerre.h  gsl_sf_log.h  gsl_sf_pow_int.h  gsl_sf_psi.h  gsl_sf_result.h  gsl_sf_trig.h  gsl_sf_zeta.h  hyperg.c  hyperg.h  hyperg_1F1.c  hyperg_2F1.c  hyperg_U.c  laguerre.c  (+7 more)
src/gsl/sys/: coerce.c  fdiv.c  gsl_sys.h  infnan.c
src/scripts/: README.md  SOURCES_GSL.mkf  SOURCES_QFRATIO.mkf  copy_gsl.sh  get_config_aux.sh  gsl_files.mkf  process_gsl.sh
tests/: testthat.R
tests/testthat/: test_d.R  test_distr.R  test_ratio.R  test_ratio_cpp.R
vignettes/: .gitignore  bibliography.bib  cran_style.csl  minimal_style.csl  qfratio.Rmd  qfratio_distr.Rmd
